sites/all/themes/cas/sass/_responsive.scss
/* ... */
@media screen and (max-width:540px)
{
    input[type=text],
    input[type=email],
    input[type=number],
    input[type=password],
    textarea
    {
        display: block;
        width: 100%!important;
        box-sizing:border-box;
        -webkit-box-sizing:border-box;
        -moz-box-sizing:border-box;
    }

    form#webform-client-form-34,
    form#webform-client-form-35,
    form#webform-client-form-74
    {
        .form-actions
        {
            padding-left:0;
        }

        & > div > .form-item > label,
        & > div > fieldset > div > .form-item > label,
        & > div > fieldset > div > fieldset > div > .form-item > label
        {
            width:100%;
            margin-right:0;
        }
    }
}




@media screen and (max-width:480px)
{
    #page-title
    {
        height:100px;
        min-height:100px;

        h1
        {
            font-size:2em;
        }
    }

    #kids-zone-banner
    {
        height:220px;

        a.tw
        {
            top:160px;
            left:60px;
            height:45px;
            background-size:contain;
        }
        a.go-explore
        {
            top:160px;
            left: 110px;
            height:45px;
            background-size:contain;
        }
    }

    #top #block-menu-menu-social-menu
    {
        display: none;
    }
}



@media screen and (max-width:360px)
{
    #top
    {
        font-size:0.65em;

        .block ul.menu li
        {
            margin-right:1px;
        }
    }

    #section-icons a
    {
        width:150px;
        padding-top:70px;
        background-size:60px 60px;
        font-size:1em;
    }
}



@media screen and (max-height:675px)
{
    #logo
    {
        margin-bottom: 30px;
        padding-bottom: 10px;

        img
        {
            width: 170px;
        }
    }

    #block-system-main-menu>.content>div>ul>li>a
    {
        padding-top:6px;
        padding-bottom: 6px;
    }

    #block-block-1 img
    {
        width:200px!important;
        height:auto!important;
        margin:0 auto;
        display: block;
    }
}



@media screen and (min-width:806px)
{
    #block-system-main-menu
    {
        display:block!important;
    }
}

